@startuml

skinparam dpi 200
skinparam classAttributeFontSize 8
skinparam classArrowFontSize 9
skinparam classFontSize 10
skinparam nodesep 90
skinparam ranksep 40
hide stereotype

skinparam class {
   BackgroundColor White
   BackgroundColor<<Game>> LightPink
   BackgroundColor<<User>> LightBlue
   BackgroundColor<<Invitation>> LightYellow
}
skinparam shadowing false

skinparam package<<Layout>> {
borderColor Transparent
backgroundColor Transparent
fontColor Transparent
stereotypeFontColor Transparent
}

class User <<User>> {
  username: string
  password: string
  email: string
}

package Users <<Layout>>{
  class Player <<User>> {
     currency:float

  }

  class Admin <<User>> {

  }
}

class Game <<Game>> {
  Id: int
  BoardSeed: int
  Reward: float
  CreatedAt: Date

}

package Users <<Layout>> {
   class Player_Friends <<User>> {
       Player: Player
       Friend: Player
   }

   class Player_Games <<User>> {
       Player: Player
       Game: Game
       Result: string
   }
}

Player " " --|> " " User

Admin " " --|> " " User

Player "n" --|> "n" Player_Friends : is_friend

Game "n" --|> "n" Player_Games : was_played

Player "n" --|> "n" Player_Games : has_played

@enduml
